hypercode/parser/HyperCodeParser.py
# Generated from HyperCode.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class HyperCodeParser ( Parser ):

    grammarFileName = "HyperCode.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'quantum_function'", "'function'", "'Bits'", 
                     "'Qubit'", "'Int'", "'Float'", "'String'", "'Void'", 
                     "'circuit'", "'let'", "'return'", "'#:'", "'domain'", 
                     "'backend'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'quantum'", "'classical'", 
                     "'molecular'", "'='", "'+'", "'-'", "'*'", "'/'", "'('", 
                     "')'", "'{'", "'}'", "'['", "']'", "':'", "','", "'.'", 
                     "'@'", "'->'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "WHITESPACE", 
                      "COMMENT", "IDENTIFIER", "NUMBER", "STRING", "QUANTUM", 
                      "CLASSICAL", "MOLECULAR", "ASSIGN", "PLUS", "MINUS", 
                      "MUL", "DIV", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
                      "LBRACK", "RBRACK", "COLON", "COMMA", "DOT", "AT", 
                      "ARROW" ]

    RULE_program = 0
    RULE_functionDef = 1
    RULE_type = 2
    RULE_block = 3
    RULE_statement = 4
    RULE_circuitStmt = 5
    RULE_letStmt = 6
    RULE_returnStmt = 7
    RULE_exprStmt = 8
    RULE_expr = 9
    RULE_functionCall = 10
    RULE_domainDirective = 11
    RULE_backendDirective = 12

    ruleNames =  [ "program", "functionDef", "type", "block", "statement", 
                   "circuitStmt", "letStmt", "returnStmt", "exprStmt", "expr", 
                   "functionCall", "domainDirective", "backendDirective" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    WHITESPACE=15
    COMMENT=16
    IDENTIFIER=17
    NUMBER=18
    STRING=19
    QUANTUM=20
    CLASSICAL=21
    MOLECULAR=22
    ASSIGN=23
    PLUS=24
    MINUS=25
    MUL=26
    DIV=27
    LPAREN=28
    RPAREN=29
    LBRACE=30
    RBRACE=31
    LBRACK=32
    RBRACK=33
    COLON=34
    COMMA=35
    DOT=36
    AT=37
    ARROW=38

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



        def __init__(self, input, output=sys.stdout):
            super().__init__(input, output)
            self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)



    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(HyperCodeParser.EOF, 0)

        def functionDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HyperCodeParser.FunctionDefContext)
            else:
                return self.getTypedRuleContext(HyperCodeParser.FunctionDefContext,i)


        def domainDirective(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HyperCodeParser.DomainDirectiveContext)
            else:
                return self.getTypedRuleContext(HyperCodeParser.DomainDirectiveContext,i)


        def backendDirective(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HyperCodeParser.BackendDirectiveContext)
            else:
                return self.getTypedRuleContext(HyperCodeParser.BackendDirectiveContext,i)


        def COMMENT(self, i:int=None):
            if i is None:
                return self.getTokens(HyperCodeParser.COMMENT)
            else:
                return self.getToken(HyperCodeParser.COMMENT, i)

        def WHITESPACE(self, i:int=None):
            if i is None:
                return self.getTokens(HyperCodeParser.WHITESPACE)
            else:
                return self.getToken(HyperCodeParser.WHITESPACE, i)

        def getRuleIndex(self):
            return HyperCodeParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = HyperCodeParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 137439055872) != 0):
                self.state = 31
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 26
                    self.functionDef()
                    pass

                elif la_ == 2:
                    self.state = 27
                    self.domainDirective()
                    pass

                elif la_ == 3:
                    self.state = 28
                    self.backendDirective()
                    pass

                elif la_ == 4:
                    self.state = 29
                    self.match(HyperCodeParser.COMMENT)
                    pass

                elif la_ == 5:
                    self.state = 30
                    self.match(HyperCodeParser.WHITESPACE)
                    pass


                self.state = 35
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 36
            self.match(HyperCodeParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AT(self):
            return self.getToken(HyperCodeParser.AT, 0)

        def COLON(self):
            return self.getToken(HyperCodeParser.COLON, 0)

        def IDENTIFIER(self):
            return self.getToken(HyperCodeParser.IDENTIFIER, 0)

        def LPAREN(self):
            return self.getToken(HyperCodeParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(HyperCodeParser.RPAREN, 0)

        def ARROW(self):
            return self.getToken(HyperCodeParser.ARROW, 0)

        def type_(self):
            return self.getTypedRuleContext(HyperCodeParser.TypeContext,0)


        def block(self):
            return self.getTypedRuleContext(HyperCodeParser.BlockContext,0)


        def getRuleIndex(self):
            return HyperCodeParser.RULE_functionDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDef" ):
                listener.enterFunctionDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDef" ):
                listener.exitFunctionDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDef" ):
                return visitor.visitFunctionDef(self)
            else:
                return visitor.visitChildren(self)




    def functionDef(self):

        localctx = HyperCodeParser.FunctionDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_functionDef)
        self._la = 0 # Token type
        try:
            self.state = 59
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 38
                self.match(HyperCodeParser.AT)
                self.state = 39
                self.match(HyperCodeParser.T__0)
                self.state = 40
                self.match(HyperCodeParser.COLON)
                self.state = 41
                self.match(HyperCodeParser.IDENTIFIER)
                self.state = 42
                self.match(HyperCodeParser.LPAREN)
                self.state = 43
                self.match(HyperCodeParser.RPAREN)
                self.state = 44
                self.match(HyperCodeParser.ARROW)
                self.state = 45
                self.type_()
                self.state = 46
                self.block()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 48
                self.match(HyperCodeParser.AT)
                self.state = 49
                self.match(HyperCodeParser.T__1)
                self.state = 50
                self.match(HyperCodeParser.COLON)
                self.state = 51
                self.match(HyperCodeParser.IDENTIFIER)
                self.state = 52
                self.match(HyperCodeParser.LPAREN)
                self.state = 53
                self.match(HyperCodeParser.RPAREN)
                self.state = 56
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==38:
                    self.state = 54
                    self.match(HyperCodeParser.ARROW)
                    self.state = 55
                    self.type_()


                self.state = 58
                self.block()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return HyperCodeParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)




    def type_(self):

        localctx = HyperCodeParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 504) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(HyperCodeParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(HyperCodeParser.RBRACE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HyperCodeParser.StatementContext)
            else:
                return self.getTypedRuleContext(HyperCodeParser.StatementContext,i)


        def getRuleIndex(self):
            return HyperCodeParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = HyperCodeParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.state = 76
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [30]:
                self.enterOuterAlt(localctx, 1)
                self.state = 63
                self.match(HyperCodeParser.LBRACE)
                self.state = 67
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 137439870976) != 0):
                    self.state = 64
                    self.statement()
                    self.state = 69
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 70
                self.match(HyperCodeParser.RBRACE)
                pass
            elif token in [17, 18, 19, 37]:
                self.enterOuterAlt(localctx, 2)
                self.state = 72 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 71
                        self.statement()

                    else:
                        raise NoViableAltException(self)
                    self.state = 74 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def circuitStmt(self):
            return self.getTypedRuleContext(HyperCodeParser.CircuitStmtContext,0)


        def letStmt(self):
            return self.getTypedRuleContext(HyperCodeParser.LetStmtContext,0)


        def returnStmt(self):
            return self.getTypedRuleContext(HyperCodeParser.ReturnStmtContext,0)


        def exprStmt(self):
            return self.getTypedRuleContext(HyperCodeParser.ExprStmtContext,0)


        def getRuleIndex(self):
            return HyperCodeParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = HyperCodeParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_statement)
        try:
            self.state = 82
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 78
                self.circuitStmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 79
                self.letStmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 80
                self.returnStmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 81
                self.exprStmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CircuitStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AT(self):
            return self.getToken(HyperCodeParser.AT, 0)

        def COLON(self):
            return self.getToken(HyperCodeParser.COLON, 0)

        def IDENTIFIER(self):
            return self.getToken(HyperCodeParser.IDENTIFIER, 0)

        def block(self):
            return self.getTypedRuleContext(HyperCodeParser.BlockContext,0)


        def getRuleIndex(self):
            return HyperCodeParser.RULE_circuitStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCircuitStmt" ):
                listener.enterCircuitStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCircuitStmt" ):
                listener.exitCircuitStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCircuitStmt" ):
                return visitor.visitCircuitStmt(self)
            else:
                return visitor.visitChildren(self)




    def circuitStmt(self):

        localctx = HyperCodeParser.CircuitStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_circuitStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(HyperCodeParser.AT)
            self.state = 85
            self.match(HyperCodeParser.T__8)
            self.state = 86
            self.match(HyperCodeParser.COLON)
            self.state = 87
            self.match(HyperCodeParser.IDENTIFIER)
            self.state = 88
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LetStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AT(self):
            return self.getToken(HyperCodeParser.AT, 0)

        def COLON(self):
            return self.getToken(HyperCodeParser.COLON, 0)

        def IDENTIFIER(self):
            return self.getToken(HyperCodeParser.IDENTIFIER, 0)

        def ASSIGN(self):
            return self.getToken(HyperCodeParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(HyperCodeParser.ExprContext,0)


        def getRuleIndex(self):
            return HyperCodeParser.RULE_letStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLetStmt" ):
                listener.enterLetStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLetStmt" ):
                listener.exitLetStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLetStmt" ):
                return visitor.visitLetStmt(self)
            else:
                return visitor.visitChildren(self)




    def letStmt(self):

        localctx = HyperCodeParser.LetStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_letStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(HyperCodeParser.AT)
            self.state = 91
            self.match(HyperCodeParser.T__9)
            self.state = 92
            self.match(HyperCodeParser.COLON)
            self.state = 93
            self.match(HyperCodeParser.IDENTIFIER)
            self.state = 94
            self.match(HyperCodeParser.ASSIGN)
            self.state = 95
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AT(self):
            return self.getToken(HyperCodeParser.AT, 0)

        def COLON(self):
            return self.getToken(HyperCodeParser.COLON, 0)

        def expr(self):
            return self.getTypedRuleContext(HyperCodeParser.ExprContext,0)


        def getRuleIndex(self):
            return HyperCodeParser.RULE_returnStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnStmt" ):
                listener.enterReturnStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnStmt" ):
                listener.exitReturnStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnStmt" ):
                return visitor.visitReturnStmt(self)
            else:
                return visitor.visitChildren(self)




    def returnStmt(self):

        localctx = HyperCodeParser.ReturnStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_returnStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(HyperCodeParser.AT)
            self.state = 98
            self.match(HyperCodeParser.T__10)
            self.state = 99
            self.match(HyperCodeParser.COLON)
            self.state = 100
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(HyperCodeParser.ExprContext,0)


        def getRuleIndex(self):
            return HyperCodeParser.RULE_exprStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprStmt" ):
                listener.enterExprStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprStmt" ):
                listener.exitExprStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprStmt" ):
                return visitor.visitExprStmt(self)
            else:
                return visitor.visitChildren(self)




    def exprStmt(self):

        localctx = HyperCodeParser.ExprStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_exprStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(HyperCodeParser.IDENTIFIER, 0)

        def NUMBER(self):
            return self.getToken(HyperCodeParser.NUMBER, 0)

        def STRING(self):
            return self.getToken(HyperCodeParser.STRING, 0)

        def functionCall(self):
            return self.getTypedRuleContext(HyperCodeParser.FunctionCallContext,0)


        def getRuleIndex(self):
            return HyperCodeParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = HyperCodeParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_expr)
        try:
            self.state = 108
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 104
                self.match(HyperCodeParser.IDENTIFIER)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 105
                self.match(HyperCodeParser.NUMBER)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 106
                self.match(HyperCodeParser.STRING)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 107
                self.functionCall()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionCallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(HyperCodeParser.IDENTIFIER, 0)

        def LPAREN(self):
            return self.getToken(HyperCodeParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(HyperCodeParser.RPAREN, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HyperCodeParser.ExprContext)
            else:
                return self.getTypedRuleContext(HyperCodeParser.ExprContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(HyperCodeParser.COMMA)
            else:
                return self.getToken(HyperCodeParser.COMMA, i)

        def getRuleIndex(self):
            return HyperCodeParser.RULE_functionCall

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionCall" ):
                listener.enterFunctionCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionCall" ):
                listener.exitFunctionCall(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionCall" ):
                return visitor.visitFunctionCall(self)
            else:
                return visitor.visitChildren(self)




    def functionCall(self):

        localctx = HyperCodeParser.FunctionCallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_functionCall)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(HyperCodeParser.IDENTIFIER)
            self.state = 111
            self.match(HyperCodeParser.LPAREN)
            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 917504) != 0):
                self.state = 112
                self.expr()
                self.state = 117
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==35:
                    self.state = 113
                    self.match(HyperCodeParser.COMMA)
                    self.state = 114
                    self.expr()
                    self.state = 119
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 122
            self.match(HyperCodeParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DomainDirectiveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COLON(self):
            return self.getToken(HyperCodeParser.COLON, 0)

        def IDENTIFIER(self):
            return self.getToken(HyperCodeParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return HyperCodeParser.RULE_domainDirective

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDomainDirective" ):
                listener.enterDomainDirective(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDomainDirective" ):
                listener.exitDomainDirective(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDomainDirective" ):
                return visitor.visitDomainDirective(self)
            else:
                return visitor.visitChildren(self)




    def domainDirective(self):

        localctx = HyperCodeParser.DomainDirectiveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_domainDirective)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(HyperCodeParser.T__11)
            self.state = 125
            self.match(HyperCodeParser.T__12)
            self.state = 126
            self.match(HyperCodeParser.COLON)
            self.state = 127
            self.match(HyperCodeParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BackendDirectiveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COLON(self):
            return self.getToken(HyperCodeParser.COLON, 0)

        def IDENTIFIER(self):
            return self.getToken(HyperCodeParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return HyperCodeParser.RULE_backendDirective

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBackendDirective" ):
                listener.enterBackendDirective(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBackendDirective" ):
                listener.exitBackendDirective(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBackendDirective" ):
                return visitor.visitBackendDirective(self)
            else:
                return visitor.visitChildren(self)




    def backendDirective(self):

        localctx = HyperCodeParser.BackendDirectiveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_backendDirective)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(HyperCodeParser.T__11)
            self.state = 130
            self.match(HyperCodeParser.T__13)
            self.state = 131
            self.match(HyperCodeParser.COLON)
            self.state = 132
            self.match(HyperCodeParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





